Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23133

Concatenation error leads to typo in the warning message

    XMLWordPrintable

Details

    Description

      10.5 6877ef9a7c

      MariaDB [test]> set session_track_system_variables='foo';
      Query OK, 0 rows affected, 1 warning (0.000 sec)
       
      MariaDB [test]> show warnings;
      +---------+------+--------------------------------------------------------+
      | Level   | Code | Message                                                |
      +---------+------+--------------------------------------------------------+
      | Warning | 1231 | foo is not a valid system variable and willbe ignored. |
      +---------+------+--------------------------------------------------------+
      1 row in set (0.001 sec)
      

      "willbe" is the typo.

      Attachments

        Activity

          People

            danblack Daniel Black
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 10m
                10m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.