MDEV-23133 session tracker - warning message typo

Concatenation error leads to typo in the warning message